cabal-version:       2.2

name:                hbgp
version:             0.2.2.2
license:             Apache-2.0
license-file:        LICENSE
author:              nic hart
maintainer:          nic@hdb3.net
copyright:           Nicholas Hart
category:            Network
extra-source-files:  README.md

executable hbgp
  main-is:             Router/Router.hs
  other-modules: BGPRib.AdjRIBOut , BGPRib.BGPData , BGPRib.BGPReader , BGPRib.BGPRib , BGPRib.BogonFilter , BGPRib.Common , BGPRib.Fifo , BGPRib.PathFilter , BGPRib.PrefixTable , BGPRib.PrefixTableUtils , BGPRib.Rib , BGPRib.Update , BGPlib.ASPath , BGPlib.BGPlib , BGPlib.BGPHandle, BGPlib.BGPparse , BGPlib.Capabilities , BGPlib.Codes , BGPlib.GetBGPMsg , BGPlib.LibCommon , BGPlib.PathAttributeUtils , BGPlib.PathAttributes , BGPlib.Prefixes , BGPlib.RFC4271 , Paths_hbgp , Router.BgpFSM , Router.Collision , Router.Config , Router.Global , Router.Log , Router.Open , Router.Redistributor , Router.StdRib , Session.Session , ZServ.Debug , ZServ.WireFormat , ZServ.ZMsg , ZServ.ZMsgBinary , ZServ.ZServ , ZServ.ZSpec
  other-extensions:    DataKinds, DuplicateRecordFields, RecordWildCards, MultiWayIf, OverloadedStrings, FlexibleInstances, TupleSections, Strict, MultiParamTypeClasses, FunctionalDependencies, ForeignFunctionInterface, TypeSynonymInstances, FlexibleContexts, DeriveGeneric, BangPatterns, ConstrainedClassMethods
  build-depends:       base , bytestring , iproute , attoparsec , attoparsec-binary , base16-bytestring , pretty-hex , io-streams , network , binary , containers , time , unix , sorted-list , hashable , unordered-containers , sorted-list , farmhash , extra
  default-language:    Haskell2010

