cabal-version:       2.4
name:                bgplib
version:             0.1.3.0
synopsis:            Haskell library for parsing BGP, including wire format/socket level interaction
license:             Apache-2.0
license-file:        LICENSE
author:              nicholas hart
maintainer:          nic@hdb3.net
copyright:           nicholas hart
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md

library
  ghc-options:         -O2 -Wall
  exposed-modules:     BGPlib4, BGPlib, PathAttributeUtils, PathAttributes, Capabilities, Codes, ASPath, LibCommon, RFC4271, GetBGPMsg, BGPparse , Prefixes, ASPath4, PathAttributeUtils4, PathAttributes4
  other-extensions:    MultiWayIf, FlexibleInstances, RecordWildCards, DataKinds, ConstrainedClassMethods, BangPatterns
  build-depends:       base >=4.9, iproute >=1.7 && <1.8, binary >=0.8 && <0.9, bytestring >=0.10 && <0.11, attoparsec >=0.13 && <0.14, attoparsec-binary >=0.2 && <0.3, hashable >= 1.2 && < 1.3, network >=2.8 && <3.1
  default-language:    Haskell2010
