cabal-version:       2.4
name:                bgprib
version:             0.1.1.4
synopsis:            Haskell support library for BGP speaker and BGP reader
license:             Apache-2.0
license-file:        LICENSE
author:              nicholas hart
maintainer:          nic@hdb3.net
copyright:           nicholas hart
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md
ghc-options: -O2 -Wall -Wno-missing-signatures -Wno-type-defaults 

library
  exposed-modules:     BGPRib, BGPReader, PrefixTableUtils, Update, BGPData, PrefixTable, AdjRIBOut, Common, Rib, Fifo, PathFilter, BogonFilter
  other-extensions:    RecordWildCards, TypeSynonymInstances, FlexibleInstances
  build-depends:       base >=4.9 && <4.13, sorted-list >=0.2 && <0.3, iproute >=1.7 && <1.8, bgplib >=0.1.2.0 && <0.2, bytestring >=0.10 && <0.11, binary >=0.8 && <0.9, hashable >=1.2 && <1.3, containers >=0.5 && <0.7, unordered-containers >=0.2 && <0.3, base16-bytestring >=0.1 && <0.2, farmhash >= 0.1.0.5 && < 0.2
  default-language:    Haskell2010
