cabal-version:       2.4

name:                bluster
version:             0.1.0.0
synopsis:            Implmentation of a group cluster based RIB for multi-peer BGP route tables
license:             Apache-2.0
author:              Nicholas Hart
copyright:           Nicholas Hart
category:            Network
build-type:          Simple

library
  exposed-modules:     GroupRIBReport, Consistency, Operations, Containers, BasicOperations, Analysis, Testdata, Core
  other-extensions:    RecordWildCards, OverloadedStrings, FlexibleInstances, DeriveGeneric
  build-depends:       base >=4.12 && <4.13, containers >=0.6 && <0.7, hashable >=1.2 && <1.3
  -- hs-source-dirs:
  default-language:    Haskell2010
