cabal-version:       2.4
name:                network-simple
version:             0.4.3.1
homepage:            https://github.com/k0001/network-simple
bug-reports:         https://github.com/k0001/network-simple/issues
author:              Renzo Carbonara
maintainer:          renλren.zone
copyright:           Copyright (c) Renzo Carbonara 2013-2018
category:            Network
build-type:          Simple
synopsis:            Simple network sockets usage patterns.

library
  hs-source-dirs:    src
  exposed-modules:   Network.Simple.TCP
  other-modules:     Network.Simple.Internal
  build-depends:     base         (>=4.7 && < 5)
                   , network      (>=2.3)
                   , network-bsd
                   , bytestring
                   , transformers
                   , safe-exceptions
                   --, socks
  default-language:    Haskell2010
