cabal-version:       2.4

name:                session
version:             0.1.0.2
synopsis:            application/protocol agnostic Haskell network daemon framework
license:             Apache-2.0
license-file:        LICENSE
author:              nicholas hart
maintainer:          nic@hdb3.net
copyright:           nicholas hart
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

library
  exposed-modules:     Session
  -- other-modules:       
  other-extensions:    RecordWildCards, MultiWayIf
  build-depends:       base >=4.9 && <4.13, network >=2.8 && <3.1, network-simple >=0.4.3.1 && <=0.4.3.1, iproute >=1.7 && <1.8, containers >=0.5 && <0.7
  -- hs-source-dirs:      
  default-language:    Haskell2010
