cabal-version:       2.4

name:                session
version:             0.1.2.0
synopsis:            application/protocol agnostic Haskell network daemon framework
license:             Apache-2.0
license-file:        LICENSE
author:              nicholas hart
maintainer:          nic@hdb3.net
copyright:           nicholas hart
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

library
  exposed-modules:     Session
  other-modules:       Poll
  other-extensions:    RecordWildCards, MultiWayIf
  build-depends:       base >=4.9 && <4.13, network >=3.0 , iproute >=1.7 && <1.8, containers >=0.5 && <0.7 , time , ioctl , unix
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -Wno-missing-signatures -Wno-type-defaults  -Wno-name-shadowing -Wno-incomplete-patterns

executable Session-test
  main-is:             Test.hs
  other-modules:       Poll
  default-language:    Haskell2010
  build-depends:       base , ioctl , network , bytestring , iproute , time , unix
  ghc-options:         -O2 -Wall -Wno-missing-signatures -Wno-type-defaults  -Wno-unused-imports

executable Server
  main-is:             Server.hs
  other-modules:       Poll
  default-language:    Haskell2010
  build-depends:       base , ioctl , network , bytestring , iproute , time , unix
  ghc-options:         -O2 -Wall -Wno-missing-signatures -Wno-type-defaults 
