cabal-version:       2.4
name:                zserv
version:             1.0.1.2
synopsis:            Haskell implementation of the zebra routing daemon API
homepage:            https://github.com/hdb3/zserv
license:             Apache-2.0
license-file:        LICENSE
author:              Nicholas Hart
maintainer:          n.p.hart@lancaster.ac.uk
copyright:           Nicholas Hart
category:            Network
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md

library
  exposed-modules:     ZServ
  other-modules:       WireFormat ZMsg ZMsgBinary ZSpec Debug

  other-extensions:    RecordWildCards, MultiWayIf, OverloadedStrings, FlexibleInstances, DataKinds, DuplicateRecordFields
  build-depends:       base >=4.9 && <4.13, bytestring >=0.10 && <0.11, attoparsec >=0.13 && <0.14, attoparsec-binary >=0.2 && <0.3, iproute >=1.7 && <1.8, binary >=0.8 && <0.9, base16-bytestring >=0.1 && <0.2, pretty-hex >=1.0 && <1.1, io-streams >=1.5 && <1.6, network >=2.8 && <3.1
  default-language:    Haskell2010
  hs-source-dirs:      lib
